setup/01-openmfp-system/mutatingwebhookconfiguration-admissionregistration.k8s.io.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: account-operator.webhooks.core.openmfp.org
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUV6akNDQXphZ0F3SUJBZ0lSQUl1SVV0OFc4UWQwTXpmVEtyRWd4dEV3RFFZSktvWklodmNOQVFFTEJRQXcKZnpFZU1Cd0dBMVVFQ2hNVmJXdGpaWEowSUdSbGRtVnNiM0J0Wlc1MElFTkJNU293S0FZRFZRUUxEQ0ZoYTJGbQpZWHB2ZGtCa1pYTnJkRzl3TVNBb1FXNW5aV3dnUzJGbVlYcHZkaWt4TVRBdkJnTlZCQU1NS0cxclkyVnlkQ0JoCmEyRm1ZWHB2ZGtCa1pYTnJkRzl3TVNBb1FXNW5aV3dnUzJGbVlYcHZkaWt3SGhjTk1qVXdNekV5TVRVeE16UTQKV2hjTk16VXdNekV5TVRVeE16UTRXakIvTVI0d0hBWURWUVFLRXhWdGEyTmxjblFnWkdWMlpXeHZjRzFsYm5RZwpRMEV4S2pBb0Jn [...]
      url: https://openmfp-account-operator-webhook.openmfp-system.svc:9443/mutate-core-openmfp-org-v1alpha1-account
    failurePolicy: Fail
    name: maccount.kb.io
    rules:
      - apiGroups:
          - core.openmfp.org
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
        resources:
          - accounts
    sideEffects: None
    timeoutSeconds: 30
